<resources>
    <string name="app_name">WareHouseManagement</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Warehouse Management</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>


    <string name="scan_barcode">Scan Barcode</string>
    <string name="barcode_result">Barcode Result here</string>
    <string name="prod_add_db">Add product to DataBase</string>
    <string name="product_db_id">"Product DB ID "</string>
    <string name="barcode_in_buffer">"Product w/ barcode=%s from buffer"</string>
    <string name="barcode_not_available">"Product w/ barcode=%s not available in Product DB."</string>
    <string name="barcode_not_available_db">"Product w/ barcode=%s not available on Product DB."</string>
    <string name="barcode_read_db">"Product w/ barcode=%s, id=%d read from Product DB."</string>
    <string name="barcode_already_db">"Product w/ barcode=%s, id=%d already on Product DB."</string>
    <string name="barcode_inserted_db">"Product w/ barcode=%s inserted in Product DB w/ id=%d ."</string>
    <string name="barcode_inserted_db_err">"ERROR inserting product w/ barcode=%s in Product DB."</string>
    <string name="unknown_uri_insert">unknown URI %s</string>
    <string name="unknown_uri_query">unknown URI %s query</string>
    <string name="unknown_uri_delete">unknown URI %s delete</string>
    <string name="unknown_uri_update">unknown URI %s update</string>
    <string name="unknown_uri_type">Unknown URI %s for getType(..)</string>
    <string name="add_prod_scan_barcode">Scan Barcode</string>
    <string name="add_product_barcode_hint">Enter or scan barcode</string>
    <string name="add_product_barcode_type_desc">Enter Barcode Type</string>
    <string name="add_product_barcode_type_hint">Enter barcode type</string>
    <string name="add_product_name_type_hint">Enter Product Name</string>
    <string name="add_prod_scan_ocr">Scan OCR</string>
    <string name="add_product_list_price_hint">Enter list price</string>
    <string name="add_product_count_hint"><![CDATA[Enter count if > 1]]></string>
    <string name="add_prod_picture_camera">Add picture from camera</string>
    <string name="add_prod_picture_internet">Add picture from internet</string>
    <string name="add_product">Add new product to DB</string>
    <string name="display_product">Display product DB</string>

    <string name="menu_shoppingcart">Shopping Cart</string>
    <string name="menu_stock">Stock</string>
    <string name="menu_products">Products</string>
    <string name="cart_empty">Cart empty</string>


</resources>
