<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <!-- https://materialdesignicons.com/ -->
        <item
            android:id="@+id/nav_shoppingcart"
            android:icon="@drawable/store"
            android:title="@string/menu_shoppingcart" />

        <item
            android:id="@+id/nav_stock"
            android:icon="@drawable/store"
            android:title="@string/menu_stock" />

        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/store"
            android:title="@string/menu_products" />
    </group>
</menu>
